0.43  Added Hisanobu Okuda's rlwrapfilter.py python3 module
      and example filters

      Added bindable readline command rlwrap-direct-keypress
      that bypasses readline editing and sends its keypress directly
      to the rlwrapped command (like CTRL-G for the Erlang shell)
      
      Added bindable readline command rlwrap-hotkey that passes
      the current input buffer and history to the filter (or
      filter pipeline) specified with the '-z' option. This can
      be used e.g. to insert the current selection at the cursor
      position, or to edit (re-write) the history.

       This uncovered quite a few bugs and inconsistencies:
         - My ncurses' termcap emulation misses some codes (like
           term_cursor_hpos) that its terminfo has. rlwrap now
           always searches terminfo before termcap.
         - rlwrap was confused about the role of history_offset,
           resulting in muddled and unclear (although correct) code.
         - rlwrap --history-size -0 would clobber the history file
           (as per the manual - that has been updated as well)
      
      Playing back a readline macro consisting of more than one line
      would crash with SIGSEGV

      rlwrap with negative --histsize would fail when there is no
      history file yet.

      An empty prompt would make $filter->{cumulative_output} miss
      its last line 

      Pre-given (-P) input would only be put in input line after
      cooking timeout (usually 40 msec)

      One-shot (-o) rlwrap could accept more than one line when input
      in quick succession.

      rlwrap didn't delete the tempfiles used in a multi-line
      edit

      configure.ac now works even when cross-compiling (skipping some
      tests, but providing sensible defaults)
      
0.42  Added --mirror-arguments (-U) option 

      On SunOS tcgetattr(slave pty) failed with "Invalid argument" 

      If the completion list contained two words, one of which a